--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": 2,
+    "manifest_version": 3,
     "default_locale": "en",
 
     "name": "__MSG_extension_name__",
@@ -20,9 +20,7 @@
         "run_at": "document_end"
     }],
 
-    "browser_action": {
+    "action": {
         "default_icon": "images/toolbar-icon.svg"
-    },
-
-    "permissions": [ ]
+    }
 }
